--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
+    <!-- <script>(function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
                     new Date().getTime(), event: 'gtm.js'
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-WKDLQ7SK');</script>
+        })(window, document, 'script', 'dataLayer', 'GTM-WKDLQ7SK');</script> -->
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <script defer src="https://www.googletagmanager.com/gtag/js?id=GTM-W9V822CK"></script>
     <script defer src="https://connect.facebook.net/en_US/fbevents.js"></script>
     <!-- Google tag (gtag.js) event - delayed navigation helper -->
-    <script>
+    <!-- <script>
         // Helper function to delay opening a URL until a gtag event is sent.
         // Call it in response to an action that should navigate to a URL.
         function gtagSendEvent(url) {
@@ -39,18 +39,18 @@
             });
             return false;
         }
-    </script>
+    </script> -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MYT0F4WMP"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-1MYT0F4WMP"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'G-1MYT0F4WMP');
-    </script>
+    </script> -->
     <!-- Google tag (gtag.js) event -->
-    <script>
+    <!-- <script>
         gtag('event', 'conversion_event_page_view', {
             // <event_parameters>
         });
@@ -68,9 +68,9 @@
             });
             return false;
         }
-    </script>
+    </script> -->
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true; j.src = "https://stape.originaltattoo.com.br/4b4ukchdbfrvh.js?" + i; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'ey7whs3i=aWQ9R1RNLVdLRExRN1NL&sort=asc');</script>
+    <!-- <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s); j.async = true; j.src = "https://stape.originaltattoo.com.br/4b4ukchdbfrvh.js?" + i; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'ey7whs3i=aWQ9R1RNLVdLRExRN1NL&sort=asc');</script> -->
     <!-- End Google Tag Manager -->
     <script>
         tailwind.config = {
