--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg pl-[60px] pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200" />
                 </div>
                 <div>
-                    <button type="button" onclick="handleStep1()" class="btn-animate relative px-4 py-3 text-sm rounded-md
+                    <button type="button" onclick="handleStep1()" class="btn-animate relative px-4 py-3 text-sm rounded-full
  font-bold ">Continuar <i class="fas fa-arrow-right ml-2"></i>
                     </button>
                 </div>
@@ -177,12 +177,12 @@
                 <div class="flex flex-col justify-end items-end">
                     <label>
                         <input type="radio" name="servico" value="tattoo" class="hidden" />
-                        <div class="p-4 mb-2 btn-animate rounded-lg max-w-[150px] w-[150px]">Tatuagem
+                        <div class="p-4 mb-2 btn-animate rounded-full max-w-[150px] w-[150px]">Tatuagem
                         </div>
                     </label>
                     <label>
                         <input type="radio" name="servico" value="piercing" class="hidden" />
-                        <div class="p-4 mb-4 btn-animate rounded-lg max-w-[150px] w-[150px]">Piercing
+                        <div class="p-4 mb-4 btn-animate rounded-full max-w-[150px] w-[150px]">Piercing
                         </div>
                     </label>
                 </div>
@@ -195,15 +195,15 @@
                 <p class="mb-4">Qual tipo de tatuagem?</p>
                 <div class="flex flex-col justify-end items-end">
                     <label><input type="radio" name="opcaoServico" value="novaTattoo" class="hidden" />
-                        <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px]">Nova Tatuagem
+                        <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px]">Nova Tatuagem
                         </div>
                     </label>
                     <label><input type="radio" name="opcaoServico" value="cobertura" class="hidden" />
-                        <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px]">Cobertura
+                        <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px]">Cobertura
                         </div>
                     </label>
                     <label><input type="radio" name="opcaoServico" value="tattooIndolor" class="hidden" />
-                        <div class="p-4 mb-4 btn-animate rounded-lg max-w-[180px] w-[180px]">Tatuagem
+                        <div class="p-4 mb-4 btn-animate rounded-full max-w-[180px] w-[180px]">Tatuagem
                             Indolor</div>
                     </label>
                 </div>
@@ -214,12 +214,13 @@
                             class="fa-solid fa-arrow-left"></i></button>
                 </div>
             </div>
+            
             <div id="step4" class=" space-y-6 max-w-md mx-auto bg-[#090909] p-6 rounded-lg text-gray-100 card-step">
                 <div id="nova-tattoo-detalhes" class="">
                     <div class="flex flex-col justify-end items-end">
                         <p class="mb-2">Nova Tatuagem</p>
                         <label><input type="radio" name="saibaMais" value="SaibaMaisNovaTattoo" class="hidden" />
-                            <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px] cursor-pointer">
+                            <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px] cursor-pointer">
                                 Saiba mais</div>
                         </label>
                     </div>
@@ -228,7 +229,7 @@
                     <div class="flex flex-col justify-end items-end">
                         <p class="mb-2">Cobertura</p>
                         <label><input type="radio" name="saibaMais" value="SaibaMaisCobertura" class="hidden" />
-                            <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px]  cursor-pointer">
+                            <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px]  cursor-pointer">
                                 Saiba mais</div>
                         </label>
                     </div>
@@ -237,7 +238,7 @@
                     <div class="flex flex-col justify-end items-end">
                         <p class="mb-2">Tatuagem Indolor</p>
                         <label><input type="radio" name="saibaMais" value="SaibaMaisTattooIndolor" class="hidden" />
-                            <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px] cursor-pointer">
+                            <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px] cursor-pointer">
                                 Saiba mais</div>
                         </label>
                     </div>
@@ -246,7 +247,7 @@
                     <div class="flex flex-col justify-end items-end">
                         <p class="mb-2">Piercing</p>
                         <label><input type="radio" name="saibaMais" value="SaibaMaisPiercing" class="hidden" />
-                            <div class="p-4 mb-2 btn-animate rounded-lg max-w-[180px] w-[180px] cursor-pointer">
+                            <div class="p-4 mb-2 btn-animate rounded-full max-w-[180px] w-[180px] cursor-pointer">
                                 Saiba mais</div>
                         </label>
                     </div>
@@ -257,7 +258,7 @@
                             class="fa-solid fa-arrow-left"></i>
                     </button>
                     <button type="submit" id="btn-cta"
-                        class="btn-animate rounded-lg max-w-[180px] w-[180px] px-8 py-3 text-lg flex items-center gap-2 rounded font-bold">
+                        class="btn-animate rounded-full max-w-[180px] w-[180px] px-8 py-3 text-lg flex items-center gap-2 rounded font-bold">
                         <i class="fa-solid fa-phone"></i>
                         </svg>
                         <span>Agendar</span>
@@ -293,6 +294,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/intlTelInput.min.js"></script>
+
+    <script src="src/files/js/script.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -336,257 +339,6 @@
         });
     </script>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const form = document.getElementById('formOrcamento');
-
-            form.addEventListener('submit', function (e) {
-                e.preventDefault();
-
-
-                function getCookieValue(name) {
-                    const value = `; ${document.cookie}`;
-                    const parts = value.split(`; ${name}=`);
-                    return parts.length === 2 ? parts.pop().split(";").shift() : null;
-                }
-
-
-                function getFormValues(formElement) {
-                    const formData = new FormData(formElement);
-                    const values = {};
-
-                    for (const [key, value] of formData.entries()) {
-                        values[key] = value;
-                    }
-                    return values;
-                }
-
-                // objeto com cookies
-                const cookieData = {
-                    stape_user_id: getCookieValue("stape_user_id"),
-                    fbp: getCookieValue("_fbp"),
-                    fbc: getCookieValue("_fbc"),
-                    fr: getCookieValue("fr"),
-                    gclid: getCookieValue("GCL_AW_P"),
-                    ttclid: getCookieValue("tt_gclid"),
-                    tt_utm_source: getCookieValue("tt_utm_source"),
-                    tt_utm_medium: getCookieValue("tt_utm_medium"),
-                    tt_utm_campaign: getCookieValue("tt_utm_campaign"),
-                    tt_utm_term: getCookieValue("tt_utm_term"),
-                    tt_utm_content: getCookieValue("tt_utm_content"),
-                    name: getCookieValue("name_cookie"),
-                    email: getCookieValue("email_cookie"),
-                    phone: getCookieValue("phone_cookie"),
-                    fn: getCookieValue("fn_cookie"),
-                    ln: getCookieValue("ln_cookie"),
-                    fpid: getCookieValue("FPID"),
-                    fplc: getCookieValue("FPLC"),
-                    ctwaClid: getCookieValue("ctwaClid"),
-                };
-
-                const formValues = getFormValues(form);
-
-                const webhookData = {
-                    ...cookieData,
-                    ...formValues
-                };
-
-                console.log(webhookData);
-
-                // Envia via webhook (substitua pela sua URL)
-                fetch("https://webhook.tuzinho.app/webhook/cookieG4", {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json",
-                    },
-                    body: JSON.stringify(webhookData),
-                })
-                    .then((res) => {
-                        if (res.ok) {
-                            window.dataLayer = window.dataLayer || [];
-                            window.dataLayer.push({
-                                event: "iniciou_video"
-                            });
-                            console.log("✅ Dados enviados ao webhook com sucesso");
-                        } else {
-                            console.error("❌ Erro ao enviar dados:", res.statusText);
-                        }
-                    })
-                    .catch((err) => {
-                        console.error("❗ Erro de rede ou CORS:", err);
-                    });
-            });
-        });
-
-    </script>
-
-    <script>
-        let currentStep = 1;
-        const steps = ['step1', 'step2', 'step3', 'step4'];
-        let servicoEscolhido = '';
-        let tipoTattooEscolhido = '';
-        let saibaMaisEscolhido = '';
-        let iti;
-
-        function showStep(id) {
-            steps.forEach(s => {
-                document.getElementById(s)?.classList.add('hidden');
-            });
-            document.getElementById(id)?.classList.remove('hidden');
-        }
-
-        function nextStep(id) {
-            if (id === 'step4') showServiceDetail();
-            showStep(id);
-        }
-
-        function voltarDoStep2() {
-            showStep('step1');
-        }
-
-        function voltarDoStep3() {
-            showStep('step2');
-        }
-
-        function voltarDoStep4() {
-            if (servicoEscolhido === 'piercing') {
-                showStep('step2');
-            } else {
-                showStep('step3');
-            }
-        }
-
-        function showServiceDetail() {
-            document.getElementById('nova-tattoo-detalhes')?.classList.add('hidden');
-            document.getElementById('cobertura-detalhes')?.classList.add('hidden');
-            document.getElementById('tattoo-indolor-detalhes')?.classList.add('hidden');
-            document.getElementById('piercing-detalhes')?.classList.add('hidden');
-
-            if (servicoEscolhido === 'piercing') {
-                document.getElementById('piercing-detalhes')?.classList.remove('hidden');
-            } else {
-                if (tipoTattooEscolhido === 'novaTattoo') {
-                    document.getElementById('nova-tattoo-detalhes')?.classList.remove('hidden');
-                } else if (tipoTattooEscolhido === 'cobertura') {
-                    document.getElementById('cobertura-detalhes')?.classList.remove('hidden');
-                } else if (tipoTattooEscolhido === 'tattooIndolor') {
-                    document.getElementById('tattoo-indolor-detalhes')?.classList.remove('hidden');
-                }
-            }
-        }
-
-        function abrirModal(contentId) {
-            const contentMap = {
-                'SaibaMaisNovaTattoo': 'modal-conteudo-nova-tattoo',
-                'SaibaMaisCobertura': 'modal-conteudo-cobertura',
-                'SaibaMaisTattooIndolor': 'modal-conteudo-indolor',
-                'SaibaMaisPiercing': 'modal-conteudo-piercing'
-            };
-            document.querySelectorAll('.modal-conteudo').forEach(el => el.classList.add('hidden'));
-            const targetId = contentMap[contentId];
-            if (targetId) {
-                document.getElementById(targetId)?.classList.remove('hidden');
-                document.getElementById('modalSaibaMais')?.classList.remove('hidden');
-            }
-        }
-
-        function fecharModal() {
-            document.getElementById('modalSaibaMais')?.classList.add('hidden');
-        }
-
-        function validarStep1() {
-            const nome = document.getElementById('nome').value.trim();
-            const email = document.getElementById('email').value.trim();
-            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            if (!nome || nome.length < 3) {
-                alert('Por favor, insira um nome válido.');
-                return false;
-            }
-            if (!emailRegex.test(email)) {
-                alert('Por favor, insira um e-mail válido.');
-                return false;
-            }
-            if (!iti.isValidNumber()) {
-                alert('Por favor, insira um número de telefone válido.');
-                return false;
-            }
-            return true;
-        }
-
-        function handleStep1() {
-            if (validarStep1()) {
-                const nomeCompleto = document.getElementById('nome').value.trim();
-                const primeiroNome = nomeCompleto.split(' ')[0] || '';
-                document.getElementById('PrimeiroNomeDoUsuario').textContent = primeiroNome;
-                document.getElementById('step1').classList.add('hidden');
-                document.getElementById('step2').classList.remove('hidden');
-            }
-        }
-
-        function aplicarMascaraTelefone(input) {
-            input.addEventListener('input', function (e) {
-                let v = input.value.replace(/\D/g, "");
-                if (v.length > 11) v = v.slice(0, 11);
-                if (v.length > 0) v = "(" + v;
-                if (v.length > 3) v = v.slice(0, 3) + ") " + v.slice(3);
-                if (v.length > 4) v = v.slice(0, 6) + " " + v.slice(6);
-                if (v.length > 10) v = v.slice(0, 11) + "-" + v.slice(11);
-                input.value = v;
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const telefoneInput = document.getElementById('telefone');
-            iti = window.intlTelInput(telefoneInput, {
-                initialCountry: "br",
-                nationalMode: true,
-                separateDialCode: true,
-                formatOnDisplay: true,
-                autoHideDialCode: false,
-                utilsScript: "https://cdn.jsdelivr.net/npm/intl-tel-input@18.1.1/build/js/utils.js"
-            });
-            aplicarMascaraTelefone(telefoneInput);
-
-            showStep('step1');
-
-            document.querySelectorAll('input[name="servico"]').forEach(input => {
-                input.closest('label')?.addEventListener('click', () => {
-                    setTimeout(() => {
-                        if (input.checked) {
-                            servicoEscolhido = input.value;
-                            if (servicoEscolhido === 'tattoo') {
-                                nextStep('step3');
-                            } else {
-                                nextStep('step4');
-                            }
-                        }
-                    }, 0);
-                });
-            });
-
-            document.querySelectorAll('input[name="opcaoServico"]').forEach(input => {
-                input.closest('label')?.addEventListener('click', () => {
-                    setTimeout(() => {
-                        if (input.checked) {
-                            tipoTattooEscolhido = input.value;
-                            nextStep('step4');
-                        }
-                    }, 0);
-                });
-            });
-
-            document.querySelectorAll('input[name="saibaMais"]').forEach(input => {
-                input.closest('label')?.addEventListener('click', () => {
-                    setTimeout(() => {
-                        if (input.checked) {
-                            saibaMaisEscolhido = input.value;
-                            abrirModal(saibaMaisEscolhido);
-                        }
-                    }, 0);
-                });
-            });
-        });
-    </script>
 </body>
 
 </html>
