--- a/index.html
+++ b/index.html
@@ -130,49 +130,63 @@
         .btn-animate:active {
             scale: 1;
         }
+
+        .rounded-priv{
+            border-top-left-radius: 50px;
+            border-bottom-left-radius: 50px;
+        }
     </style>
 </head>
 
 <body class="bg-[#121212] flex items-center min-h-screen text-white w-full">
     <div class="w-full mx-auto px-4 py-8">
         <form id="formOrcamento" class="space-y-10 " method="GET">
-            <div id="step1" class="space-y-6 max-w-md mx-auto bg-[#090909] p-6 rounded-lg text-gray-100 card-step">
-                <img src="src/image/Logo Branco - 465x465.png" width="200" height="200" class="mx-auto" alt="">
-                <div class="relative">
-                    <input type="text" name="nome_form_whats" id="nome" required
-                        class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg px-3 pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200 placeholder-white focus:outline-none focus:ring-0" />
-                    <span class="absolute left-[10px] top-[15px] text-xs tracking-[0.2em] capitalize px-1 transition-all duration-500 ease-in-out
+            <div id="step1" class="space-y-6 max-w-4xl mx-auto bg-[#090909] rounded-lg text-gray-100 card-step">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                    <div class="space-y-6 p-6 ">
+                        <img src="src/image/Logo Branco - 465x465.png" width="200" height="200" class="mx-auto" alt="">
+                        <div class="relative">
+                            <input type="text" name="nome_form_whats" id="nome" required
+                                class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg px-3 pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200 placeholder-white focus:outline-none focus:ring-0" />
+                            <span class="absolute left-[10px] top-[15px] text-xs tracking-[0.2em] capitalize px-1 transition-all duration-500 ease-in-out
     peer-focus:translate-x-[150px] peer-focus:md:translate-x-[250px] peer-focus:-translate-y-[24px]
     peer-valid:translate-x-[145px] peer-valid:md:translate-x-[250px] peer-valid:-translate-y-[24px]
     text-gray-400 peer-focus:text-white peer-focus:bg-gray-600 peer-focus:px-2 peer-focus:py-1 peer-focus:rounded-md
     peer-valid:text-white peer-valid:bg-gray-600 peer-valid:px-2 peer-valid:py-1 peer-valid:rounded-md
     pointer-events-none">
-                        Nome completo
-                    </span>
-                </div>
-                <div class="relative">
-                    <input type="text" name="email_form_whats" id="email" required
-                        class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg px-3 pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200 placeholder-white" />
-                    <span class="absolute left-[10px] top-[15px] text-xs tracking-[0.2em] capitalize px-1 transition-all duration-500 ease-in-out
+                                Nome completo
+                            </span>
+                        </div>
+                        <div class="relative">
+                            <input type="text" name="email_form_whats" id="email" required
+                                class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg px-3 pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200 placeholder-white" />
+                            <span class="absolute left-[10px] top-[15px] text-xs tracking-[0.2em] capitalize px-1 transition-all duration-500 ease-in-out
     peer-focus:translate-x-[170px] peer-focus:md:translate-x-[250px] peer-focus:-translate-y-[24px]
     peer-valid:translate-x-[165px] peer-valid:md:translate-x-[250px] peer-valid:-translate-y-[24px]
     text-gray-400 peer-focus:text-white peer-focus:bg-gray-600 peer-focus:px-2 peer-focus:py-1 peer-focus:rounded-md
     peer-valid:text-white peer-valid:bg-gray-600 peer-valid:px-2 peer-valid:py-1 peer-valid:rounded-md
     pointer-events-none">
-                        E-mail
-                    </span>
-                </div>
-                <div class="relative">
-                    <input type="tel" name="telefone_form_whats" id="telefone" required
-                        class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg pl-[60px] pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200" />
-                </div>
-                <div>
-                    <button type="button" onclick="handleStep1()" class="btn-animate relative px-4 py-3 text-sm rounded-full
+                                E-mail
+                            </span>
+                        </div>
+                        <div class="relative">
+                            <input type="tel" name="telefone_form_whats" id="telefone" required
+                                class="peer w-full bg-transparent border-b-2 border-l-2  rounded-bl-lg border-black focus:border-2 focus:rounded-lg pl-[60px] pt-6 pb-2 placeholder-transparent focus:outline-none transition-all duration-300 text-gray-200" />
+                        </div>
+                        <button type="button" onclick="handleStep1()" class="btn-animate relative px-4 py-3 text-sm rounded-full
  font-bold ">Continuar <i class="fas fa-arrow-right ml-2"></i>
-                    </button>
+                        </button>
+                    </div>
+
+                    <div class="bg-white rounded-tr-lg rounded-br-lg rounded-priv pl-16">
+                        <p class="text-black">Forneça essas informações para melhorar sua experiência</p>
+                    </div>
                 </div>
+
+
+
             </div>
-            <div id="step2" class=" space-y-6 max-w-md mx-auto bg-[#090909] p-6 rounded-lg text-gray-100 card-step">
+            <div id="step2" class="space-y-6 max-w-md mx-auto bg-[#090909] p-6 rounded-lg text-gray-100 card-step">
                 <p class="mb-4">Olá, <span id="PrimeiroNomeDoUsuario">$$</span>. Como podemos te ajudar?</p>
                 <div class="flex flex-col justify-end items-end">
                     <label>
@@ -214,7 +228,7 @@
                             class="fa-solid fa-arrow-left"></i></button>
                 </div>
             </div>
-            
+
             <div id="step4" class=" space-y-6 max-w-md mx-auto bg-[#090909] p-6 rounded-lg text-gray-100 card-step">
                 <div id="nova-tattoo-detalhes" class="">
                     <div class="flex flex-col justify-end items-end">
@@ -276,7 +290,14 @@
             <div id="modalContent">
                 <div id="modal-conteudo-nova-tattoo" class="modal-conteudo hidden">
                     <h2 class="text-xl font-bold mb-2">Nova Tatuagem</h2>
-                    <p>Detalhes sobre nova tatuagem.</p>
+                    <p>Com 20 anos de atividade, somos referência nacional em tatuagem.
+                        Dominamos todos os estilos e somos especializado em realismo PB e colorido
+                        Nossa equipe está preparada para te auxiliar no desenvolvimento da ideia, montagem e
+                        execução da tattoo</p>
+
+                    <button>
+                        Fazer minha nova tattoo
+                    </button>
                 </div>
                 <div id="modal-conteudo-cobertura" class="modal-conteudo hidden">
                     <h2 class="text-xl font-bold mb-2">Cobertura</h2>
@@ -284,11 +305,19 @@
                 </div>
                 <div id="modal-conteudo-indolor" class="modal-conteudo hidden">
                     <h2 class="text-xl font-bold mb-2">Tatuagem Indolor</h2>
-                    <p>Informações sobre a tatuagem sem dor.</p>
+                    <p>nossos tatuadores dominam diversas técnicas de cobertura, combinando criatividade e precisão para
+                        redesenhar ou esconder tatuagens antigas com perfeição. Cada cover-up é pensado para
+                        valorizar sua pele</p>
+                    <button>Quero cobrir uma tattoo</button>
                 </div>
                 <div id="modal-conteudo-piercing" class="modal-conteudo hidden">
                     <h2 class="text-xl font-bold mb-2">Piercing</h2>
-                    <p>Detalhes sobre piercings.</p>
+                    <p>NumbFlow é um conjunto de técnicas de tatuagem sem dor junto com uma equipe médica nunca clinica
+                        especializada. Você pode fechar diversas partes do corpo numa sessão única sem sofrer no
+                        processo, garantindo uma experiência tranquilo e um resultado perfeito</p>
+                    <button>
+                        Tatue sem dor
+                    </button>
                 </div>
             </div>
         </div>
