--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </button>
                     </div>
 
-                    <div class="bg-white rounded-tr-lg rounded-br-lg rounded-priv pl-16">
+                    <div class="bg-white rounded-tr-lg rounded-br-lg rounded-priv pl-16 hidden md:block">
                         <p class="text-black">Forneça essas informações para melhorar sua experiência</p>
                     </div>
                 </div>
